--- a/Tabular_FastAI.ipynb
+++ b/Tabular_FastAI.ipynb
@@ -6,7 +6,7 @@
       "name": "Tabular_FastAI.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOxRCzzNIUl8v0dBQXtTu8/",
+      "authorship_tag": "ABX9TyPQnNulzmZmf8VGlWYIQbOU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,6 +162,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QtWD8VC8Rwt5",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Create Data Bunch**"
+      ]
     },
     {
       "cell_type": "code",
@@ -371,6 +381,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HJ4Ud8gQR0Pe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Train**"
       ]
     },
     {
